Managers and Repositories Refactored.